@@ -57,6 +57,7 @@
 #include "lwip/snmp_structs.h"
 #include "lwip/snmp_msg.h"
 #include "lwip/dns.h"
+#include "netif/ppp_oe.h"
 
 #include <string.h>
 
